[project]
name = "noxer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladimir Korsakov", email = "vlkorsakov256@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
noxer = "noxer:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
